# academia

./: .coveragerc  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
academia/: __init__.py
academia/agents/: __init__.py  dqn_agent.py  ppo_agent.py  ql_agent.py  sarsa_agent.py
academia/agents/base/: __init__.py  (+3 more)
academia/curriculum/: __init__.py  config_loaders.py  curriculum.py  learning_task.py
academia/environments/: __init__.py  bridge_building.py  door_key.py  lava_crossing.py  lunar_lander.py  ms_pacman.py
academia/tools/: __init__.py  agent_debugger.py  visualizations.py
academia/utils/: __init__.py  saving_loading.py  stopwatch.py
docs/: README.md  conf.py  index.rst  requirements.txt
docs/guides/: custom-environments.rst
docs/source/: academia.agents.base.rst  academia.agents.rst  academia.curriculum.rst  academia.environments.base.rst  academia.environments.rst  academia.models.rst  academia.rst  academia.tools.rst  academia.tools.visualizations.rst  academia.utils.models.rst  academia.utils.rst  modules.rst
experiments/: README.md
experiments/experiment_1/: README.md  meta.json  results.ipynb  run.py  run_0.03.py  run_0.1.py  run_0.3.py  run_0.6.py  run_1.0.py
experiments/experiment_10/: README.md  results.ipynb  run.py
experiments/experiment_11/: README.md  results.ipynb  run.py
experiments/experiment_2/: README.md  results.ipynb  run.py
experiments/experiment_3/: README.md  run.py
experiments/experiment_4/: README.md  results.ipynb  run.py
experiments/experiment_5/: README.md  results.ipynb  run.py
experiments/experiment_6/: README.md  results.ipynb  run.py
experiments/experiment_7/: README.md  results.ipynb  run.py
experiments/experiment_8/: README.md  results.ipynb  run.py
experiments/experiment_9/: README.md  results.ipynb  run.py
knowledge_hub/: books_and_papers.md  notes_jk.md  notes_mo.md  notes_sg.md
src/: test.py
src/agents/: __init__.py  dqn.py  dqn_agent.py  ql_agent.py  sarsa_agent.py
src/curriculum/: __init__.py  curriculum.py  task.py
src/environments/: __init__.py  base_env.py  bridge_building.py  lava_crossing.py
src/experiments/: __init__.py  curriculum.py
src/models/: cart_pole_mlp.py
test/agents/: test_dqn_agent.py  test_ppo_agent.py  test_ql_agent.py  test_sarsa_agent.py
test/curriculum/: test_config_loaders.py  test_curriculum.py  test_learning_task.py
test/environments/: test_bridge_building.py  test_door_key.py  test_generic_atari_wrapper.py  test_generic_gymnasium_wrapper.py  test_lava_crossing.py  test_lunar_lander.py  test_ms_pacman.py
test/tools/: test_agent_debugger.py  test_visualizations.py
test/utils/: test_saving_loading.py  test_stopwatch.py
tests/environments/: test_door_key.py  test_generic_atari_wrapper.py  test_generic_gymnasium_wrapper.py  test_lava_crossing.py  test_lunar_lander.py  test_msPacman.py
(+321 files in other folders)
